--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,11 +8,29 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 645px) {
+      flex-direction: column;
+
+      .header__cart {
+        margin-top: 20px;
+      }
+
+      .button--cart {
+        margin-top: 10px;
+      }
+    }
   }
 
   &__logo {
     display: flex;
 
+    @media (max-width: 645px) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
     img {
       margin-right: 15px;
     }
